--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "aws-sdk": "^2.1356.0"
   },
   "scripts": {
     "start": "react-scripts -r @cypress/instrument-cra start",
