--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,16 @@
   "dependencies": {
     "@cypress/instrument-cra": "^1.4.0",
     "@fake-stack-overflow/shared": "^1.0.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "mongodb": "6.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.8.1",
-    "aws-sdk": "^2.1356.0"
+    "react-syntax-highlighter": "^15.6.1",
+    "socket.io-client": "^4.8.1"
   },
   "scripts": {
     "start": "react-scripts -r @cypress/instrument-cra start",
@@ -46,6 +48,7 @@
     "@eslint/js": "^8.57.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.1",
