--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,11 @@
     "mongodb": "6.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^10.1.0",
+    "react-markdown": "^9.0.0",
     "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
-    "react-syntax-highlighter": "^15.6.1",
+    "remark-breaks": "^3.0.0",
+    "unified": "^11.0.4",
     "socket.io-client": "^4.8.1"
   },
   "scripts": {
