--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
     "remark-breaks": "^3.0.0",
+    "remark-gfm": "^3.0.0",
     "unified": "^11.0.4",
     "socket.io-client": "^4.8.1"
   },
