--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "remark-breaks": "^3.0.0",
     "remark-gfm": "^3.0.0",
+    "react-syntax-highlighter": "15.3.1",
     "unified": "^11.0.4",
     "socket.io-client": "^4.8.1"
   },
