--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,11 @@
     "react-markdown": "^9.0.0",
     "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "remark-breaks": "^3.0.0",
-    "remark-gfm": "^3.0.0",
-    "react-syntax-highlighter": "15.3.1",
-    "unified": "^11.0.4",
-    "socket.io-client": "^4.8.1"
+    "remark-gfm": "^3.0.1",
+    "socket.io-client": "^4.8.1",
+    "unified": "^11.0.4"
   },
   "scripts": {
     "start": "react-scripts -r @cypress/instrument-cra start",
