--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "react-markdown": "^10.1.0",
     "remark-breaks": "^4.0.0",
     "unified": "^11.0.5"
+  },
+  "dependencies": {
+    "react-syntax-highlighter": "^15.6.1"
   }
 }
