--- a/server/package.json
+++ b/server/package.json
@@ -2,16 +2,18 @@
   "name": "@fake-stack-overflow/server",
   "version": "1.0.0",
   "dependencies": {
+    "@fake-stack-overflow/shared": "^1.0.0",
+    "axios": "1.8.4",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongodb": "6.12.0",
     "mongoose": "8.9.2",
     "nanoid": "^3.3.8",
     "npm": "^11.0.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "axios": "1.8.4",
-    "@fake-stack-overflow/shared": "^1.0.0"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
