--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,7 @@
     "nanoid": "^3.3.8",
     "npm": "^11.0.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "dotenv": "^16.4.7"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
