increased memory size in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,4 +73,6 @@ jobs:
         if: ${{ always() }}
         env:
           REACT_APP_SERVER_URL: http://localhost:8000
-        run: cd server; npm test
+        run: 
+          cd server
+          NODE_OPTIONS="--max-old-space-size=4096" npm test
