--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "aws-sdk": "^2.1692.0",
     "axios": "1.8.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "6.12.0",
     "mongoose": "8.9.2",
@@ -13,8 +14,7 @@
     "nanoid": "^3.3.8",
     "npm": "^11.0.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "dotenv": "^16.4.7"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
