--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@cypress/instrument-cra": "^1.4.0",
     "@fake-stack-overflow/shared": "^1.0.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "mongodb": "6.12.0",
