--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "unified": "^11.0.5"
   },
   "dependencies": {
-    "react-syntax-highlighter": "^15.6.1"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1"
   }
 }
