--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "mongodb": "6.12.0",
+    "mui": "^0.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.0",
